# C_zadania

./: CMakeLists.txt  _Zadania_1_Zad_1_.c  _Zadania_2_Zad_1_.c  _Zadania_2_Zad_4_.c  compile.sh  cw1.cpp  cw2.cpp  cw3.cpp  cw4.cpp  cw6.cpp  rename.sh
.github/workflows/: c-cpp-build-and-test.yml
Zajecia 1/: cw11.c  zadanie2.c  zadanie3.c  zadanie5.c
Zajecia 2/: Z2z4.c
Zajecia_1/: zadanie1.c  zadanie3.c  zadanie4.c  zadanie5.c  zadanie6.c
Zajecia_2/: Z2z2.c  Z2z3.c  Z2z5.c
Zajecia_3/: Zad_1.c  Zad_2.c
Zajecia_4/: Zad_1.c  Zad_2.c  Zad_3.c
Zajecia_5/: Zad_1.c  Zad_2.c  Zad_3.c  Zad_4.c  Zad_5.c  Zad_6.c
Zajecia_6/: Zad_1.c  Zad_2.c  Zad_3.c
Zajecia_7_C/: Zad_1.c  Zad_2.c
Zajecia_7_Cpp/: Zad_1.cpp  Zad_2.cpp
game_project/: BSO.cpp  Dragon.cpp  Dragon.h  Player.cpp  Player.h
