cmake_minimum_required(VERSION 3.27)
project(C_zd1)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_zd1

        cw2.cpp
        _Zadania_1_Zad_6_.c
        cw3.cpp
        cw4.cpp
        cw5.cpp
)
add_executable(
        _Zadania_1_Zad_1_ _Zadania_1_Zad_1_.c)
add_executable(
        _Zadania_1_Zad_6_ _Zadania_1_Zad_6_.c)
add_executable(
        _Zadania_2_Zad_5_ _Zadania_2_Zad_5_.c)
add_executable(
        _Zadania_2_Zad_1_ _Zadania_2_Zad_1_.c)
add_executable(
        _Zadania_2_Zad_2_ _Zadania_2_Zad_2_.c)
add_executable(
        _Zadania_2_Zad_3_ _Zadania_2_Zad_3_.c)
add_executable(
        _Zadania_2_Zad_4_ _Zadania_2_Zad_4_.c)