cmake_minimum_required(VERSION 3.27)
project(C_zd1)

set(CMAKE_CXX_STANDARD 14)



add_executable( Zajecia1zd1 Zajecia_1/zadanie1.c)
add_executable( Zajecia1zd2 Zajecia_1/zadanie2.c)
add_executable( Zajecia1zd3 Zajecia_1/zadanie3.c)
add_executable( Zajecia1zd4 Zajecia_1/zadanie4.c)
add_executable( Zajecia1zd5 Zajecia_1/zadanie5.c)
add_executable( Zajecia1zd6 Zajecia_1/zadanie6.c)

add_executable( Zajecia2zd1 Zajecia_2/Z2z1.c)
add_executable( Zajecia2zd2 Zajecia_2/Z2z2.c)
add_executable( Zajecia2zd3 Zajecia_2/Z2z3.c)
add_executable( Zajecia2zd4 Zajecia_2/Z2z4.c)
add_executable( Zajecia2zd5 Zajecia_2/Z2z5.c)

add_executable( Zajecia3zd1 Zajecia_3/Zad_1.c)
add_executable( Zajecia3zd2 Zajecia_3/Zad_2.c)
