cmake_minimum_required(VERSION 3.27)
project(C_zd1)

set(CMAKE_CXX_STANDARD 14)



add_executable( Zajecia1zd1 Zajecia_1/zadanie1.c)
add_executable( Zajecia1zd2 Zajecia_1/zadanie2.c)
add_executable( Zajecia1zd3 Zajecia_1/zadanie3.c)
add_executable( Zajecia1zd4 Zajecia_1/zadanie4.c)
add_executable( Zajecia1zd5 Zajecia_1/zadanie5.c)
add_executable( Zajecia1zd6 Zajecia_1/zadanie6.c)

add_executable( Zajecia2zd1 Zajecia_2/Z2z1.c)
add_executable( Zajecia2zd2 Zajecia_2/Z2z2.c)
add_executable( Zajecia2zd3 Zajecia_2/Z2z3.c)
add_executable( Zajecia2zd4 Zajecia_2/Z2z4.c)
add_executable( Zajecia2zd5 Zajecia_2/Z2z5.c)

add_executable( Zajecia3zd1 Zajecia_3/Zad_1.c)
add_executable( Zajecia3zd2 Zajecia_3/Zad_2.c)

add_executable( Zajecia4zd1 Zajecia_4/Zad_1.c)
add_executable( Zajecia4zd2 Zajecia_4/Zad_2.c)
add_executable( Zajecia4zd3 Zajecia_4/Zad_3.c)

add_executable( Zajecia5zd1 Zajecia_5/Zad_1.c)
add_executable( Zajecia5zd2 Zajecia_5/Zad_2.c)
add_executable( Zajecia5zd3 Zajecia_5/Zad_3.c)
add_executable( Zajecia5zd4 Zajecia_5/Zad_4.c)
add_executable( Zajecia5zd5 Zajecia_5/Zad_5.c)
add_executable( Zajecia5zd6 Zajecia_5/Zad_6.c)

add_executable( Zajecia6zd1 Zajecia_6/Zad_1.c)
add_executable( Zajecia6zd2 Zajecia_6/Zad_2.c)
add_executable( Zajecia6zd3 Zajecia_6/Zad_3.c)

add_executable( Zajecia7Czd1 Zajecia_7_C/Zad_1.c)


